navbar wrap issue fix

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
 .right{
 	display: inline-block;
 	float: right;
+	width: 50%;
 }
 form{
 	display: inline-block;
@@ -48,7 +49,8 @@ a, select, form{
 	font-weight: bold;
 	padding-top: 2%;
 	padding-bottom: 2%;
-	width: 95%;
+	width: 100%;
+	margin-right: 0%;
 }
 .navbar .right a{
 	color: rgb(60, 54, 66);
